discussion/kv_engine/153272/153272_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time (ep-engine)

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7 in ep-engine.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

Note that this now requires that the EP_LOG_<LEVEL> macros always take
a valid fmtlib format string as the first argument, a raw string
literal is no longer supported - the following will no longer compile:

    EP_LOG_DEBUG("Something happened"); // compile-time error.

Instead, the _RAW macros added in the previous patch should be used:

    EP_LOG_DEBUG_RAW("Something else happened"); OK

Note: The issue here is that to perform compile-time format string
      checking, the format string must be wrapped in FMT_STRING() -
      before the format string is evaluated / passed into the actual
      logging functions / methods. However, one cannot pass a
      non-string literatl to FMT_STRING - essentially by design it
      fails at compile-time if it doesn't have {} placeholders.

      To address this (and still allow both styles of parameters) we
      _could_ in theory do some complex preprocessor logic - count the
      number of variadic arguments at compile-time and only apply
      FMT_STRING() macro to first if there is 2 or more arguments in
      total. I got something working for GCC and clang and which did
      this, but it didn't work for MSVC and the GCC one triggered a
      load of warnings, hence just making original macros always
      fmt-style, and adding _RAW for plan unformatted values.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-06-04 09:18:56.000000000
Message: 
Patch Set 14: Patch Set 13 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 09:57:07.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1179/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1179/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11472/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11472/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19058/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19058/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8083/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36436/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/38/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11060/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11205/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 11:24:19.000000000
Message: 
Patch Set 14:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1179/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8083/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36436/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/38/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11060/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11205/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11485/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19070/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-04 14:33:25.000000000
Message: 
Patch Set 14: Verified+1

Overriding CV - clang-format issue is due to changing a header file (bucket_logger_impl.h) which isn't standalone.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-04 16:03:08.000000000
Message: 
Patch Set 14: Code-Review+2

(2 comments)
Line:39, /COMMIT_MSG -> typo

Line:242, engines/ep/src/bucket_logger.h -> typo

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-07 10:16:39.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
